Create customization product now creates master index file also

--- a/FX.Mobile.DeveloperTools/Templates/index-item.html
+++ b/FX.Mobile.DeveloperTools/Templates/index-item.html
@@ -1,9 +1,10 @@
-﻿<li data-action="activateEntry" data-key="" data-descriptor="">
+﻿<li data-action="activateEntry" data-key="" data-descriptor="" onClick="window.location='products/argos-saleslogix/index-dev$PRODUCTNAMEFILE$.html';">
     <div data-action="selectEntry" class="list-item-selector"></div>
     <h3 data-action="clearAuthentication">
+        
         <img src="products/argos-saleslogix/content/images/icons/Browse_Next_24.png" alt="icon" class="icon">
         <span>
-            <a href="products/argos-saleslogix/index-dev$PRODUCTNAMEFILE$.html" class="prodLink">$PRODUCTNAME$</a>
+            $PRODUCTNAME$
         </span>
     </h3>
 </li>
